# yolov3_ver2

./: CMakeLists.txt  README.md  package.xml
darkent/src/: unistd.h
darkent/x64/Release/data/: obj.data  obj.names
darkent/x64/Release/data/img/: sign101.txt  sign105.txt  sign108.txt  sign109.txt  sign111.txt  sign113.txt  sign116.txt  sign118.txt  sign12.txt  sign120.txt  sign121.txt  sign122.txt  sign124.txt  sign125.txt  sign127.txt  sign129.txt  sign130.txt  sign133.txt  sign134.txt  sign135.txt  sign136.txt  sign138.txt  sign139.txt  sign141.txt  sign142.txt  sign144.txt  sign145.txt  sign149.txt  sign15.txt  sign151.txt  sign152.txt  sign153.txt  sign154.txt  sign157.txt  sign158.txt  sign159.txt  sign16.txt  sign160.txt  sign161.txt  sign163.txt  (+343 more)
darknet/: Makefile  darknet  uselib  yolov3-tiny_obj.cfg
darknet/x64/Release/data/: train.txt
darknet/x64/Release/data/img/: sign100.txt  sign102.txt  sign103.txt  sign104.txt  sign106.txt  sign107.txt  sign110.txt  sign112.txt  sign114.txt  sign115.txt  sign117.txt  sign119.txt  sign123.txt  sign126.txt  sign128.txt  sign13.txt  sign131.txt  sign132.txt  sign137.txt  sign14.txt  sign140.txt  sign143.txt  sign146.txt  sign147.txt  sign148.txt  sign150.txt  sign155.txt  sign156.txt  sign162.txt  sign164.txt  sign166.txt  sign167.txt  sign17.txt  sign171.txt  sign172.txt  sign175.txt  sign18.txt  sign19.txt  sign199.txt  sign200.txt  (+295 more)
include/yolov3_ver2/: darknetdetector.hpp
launch/: yolov3_ver2.launch
src/: darknetdetector.cpp  yolov3_ver2.cpp
